--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -7,7 +7,10 @@
 <body>
   <h1>Figures</h1>
   <%@figures.each do |figure| %>
-    <%= figure.name %>
+    <ul>
+    <a href="/figures/<%= figure.id %>"><li><%=figure.name%>
+    </li></a>
+    </ul>
   <%end%>  
 </body>
 </html>
